# ubercalendurr

./: BLUEPRINT.md  COMPLETE_CODEBASE.md  Cargo.toml  README.md
binaries/calendar-gui/: Cargo.toml
binaries/calendar-gui/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
binaries/calendar-gui/frontend/src/: App.tsx  index.css
binaries/calendar-gui/frontend/src/components/Calendar/: CalendarGrid.tsx  DayView.tsx  WeekView.tsx
binaries/calendar-gui/frontend/src/components/Event/: EventModal.tsx
binaries/calendar-gui/frontend/src/components/Settings/: SettingsPanel.tsx
binaries/calendar-gui/frontend/src/components/Terminal/: TerminalInput.tsx
binaries/calendar-gui/frontend/src/types/: event.ts
binaries/calendar-gui/frontend/src/utils/: date.ts
binaries/calendar-gui/src/: main.rs
binaries/calendar-gui/src-tauri/: tauri.conf.json
binaries/calendar-widget/: Cargo.toml
binaries/calendar-widget/src/: api.rs  app.rs  config.rs  export.rs  input.rs  ipc.rs  main.rs  notifications.rs  storage.rs
binaries/calendar-widget/src/input/: parser.rs
libraries/IPC-primitives/: Cargo.toml
libraries/IPC-primitives/src/: lib.rs  message.rs  protocol.rs
libraries/calendar-core/: Cargo.toml
libraries/calendar-core/src/: errors.rs  lib.rs  validation.rs
libraries/calendar-core/src/models/: mod.rs
libraries/calendar-core/src/time/: mod.rs
libraries/deepseek-client/: Cargo.toml
libraries/deepseek-client/src/: client.rs  lib.rs  prompts.rs
libraries/deepseek-client/src/models/: mod.rs
libraries/storage-engine/: Cargo.toml
libraries/storage-engine/src/: errors.rs  lib.rs  migrations.rs  repository.rs
scripts/: build.ps1
