[workspace]
members = [
    "binaries/calendar-widget",
    "binaries/calendar-gui",
    "libraries/calendar-core",
    "libraries/deepseek-client",
    "libraries/storage-engine",
    "libraries/IPC-primitives",
]
resolver = "2"
exclude = ["binaries/calendar-gui/frontend"]

[workspace.package]
authors = ["UberCalendurr Team"]
description = "Dual-interface calendar application with AI-powered scheduling"
repository = "https://github.com/Ghostmonday/ubercalendurr"
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core dependencies shared across crates
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
regex = "1.10"
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"

# IPC and messaging
bincode = "1.3"
capnp = "0.20"
named_pipe = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled", "trace"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "tls"] }
tower = "0.4"
hyper = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = true
split-debuginfo = "packed"
