[package]
name = "calendar-gui"
version = "0.1.0"
edition = "2021"
description = "GUI application for UberCalendurr"
authors = ["UberCalendurr Team"]

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
tauri-build = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
directories = "5.0"

# Local dependencies
calendar-core = { path = "../../libraries/calendar-core" }
storage-engine = { path = "../../libraries/storage-engine" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
