[package]
name = "calendar-widget"
version = "0.1.0"
edition = "2021"
description = "Terminal widget for UberCalendurr"
authors = ["UberCalendurr Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
regex = "1.10"
once_cell = "1.19"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Local dependencies
calendar-core = { path = "../../libraries/calendar-core" }
deepseek-client = { path = "../../libraries/deepseek-client" }
storage-engine = { path = "../../libraries/storage-engine" }
IPC-primitives = { path = "../../libraries/IPC-primitives" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shell32"] }
