[package]
name = "calendar-core"
version = "0.1.0"
edition = "2021"
description = "Core calendar data models and validation"
authors = ["UberCalendurr Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
regex = "1.10"
thiserror = "1.0"
once_cell = "1.19"
