[package]
name = "deepseek-client"
version = "0.1.0"
edition = "2021"
description = "DeepSeek API client for natural language parsing"
authors = ["UberCalendurr Team"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "tls"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
