[package]
name = "storage-engine"
version = "0.1.0"
edition = "2021"
description = "SQLite storage layer for calendar events"
authors = ["UberCalendurr Team"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "trace"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
