[package]
name = "storage-engine"
version = "0.1.0"
edition = "2021"
description = "SQLite storage layer for calendar events"
authors = ["UberCalendurr Team"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
calendar-core = { path = "../calendar-core" }
